syntax = "proto3";
package v1;
option go_package = "/";

// Link message which is going to store information about our url or link
message Link {
  // Unique integer identifier of the link
  int64 id = 1;
  // URL of the task
  string url = 2;
  // shortUrl description of the link
  string shortUrl = 3;
}


// Request data to create new todo task
message CreateRequest {
  // API versioning: it is my best practice to specify version explicitly
  string api = 1;

  // URL represent the original long url
  string url = 2;
}

// CreateResponse that contains data for created todo task
message CreateResponse{
  // API versioning: it is my best practice to specify version explicitly
  string api = 1;

  // ID of created task
  string shortUrl = 2;
}

// GetRequest request which contains the original url
message GetRequest {
  // API versioning: it is my best practice to specify version explicitly
  string api = 1;

  // ShortURL represents the original url;
  string shortURL = 2;
}

// GetResponse response which contains shortened url of original url
message GetResponse {
  // API versioning: it is my best practice to specify version explicitly
  string api = 1;

  // OriginalURL represents the short url of original url
  string originalURL = 2;
}

// UrlShortnerService service to manage UrlShortner capabilities;
service UrlShortnerService {
  // Create new instance of URL
  rpc Create(CreateRequest) returns (CreateResponse);

  // Get the short URL of original URL
  rpc Get(GetRequest) returns (GetResponse);
}